k3s/native/ingress/media/bazarr-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr-paths
  namespace: bazarr
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  rules:
    - host: "bazarr.m1c1b.home"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  name: webui
