k3s/native/ingress/media/lidarr-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr-paths
  namespace: lidarr
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  rules:
    - host: "lidarr.m1c1b.home"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lidarr
                port:
                  name: webui
