k3s/native/ingress/media/prowlarr-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-paths
  namespace: prowlarr
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    cert-manager.io/common-name: Prowlarr home
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 'prowlarr.m1c1b.home'
      secretName: prowlarr-tls
  rules:
    - host: 'prowlarr.m1c1b.home'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  name: webui
