k3s/native/ingress/media/qbittorrent-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-paths
  namespace: qbittorrent
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  rules:
    - host: "qbt.m1c1b.home"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  name: webui
